Time Machine: Quick align fix

--- a/web/src/modules/TimeMachine/TimeMachine.scss
+++ b/web/src/modules/TimeMachine/TimeMachine.scss
@@ -32,6 +32,7 @@
     width: 100px;
     margin: auto;
     display: block;
+    text-align: center;
   }
   .notes {
     position: relative;
